style(module: drawer): fix drawer z-index (#3063)

--- a/components/drawer/style/index.less
+++ b/components/drawer/style/index.less
@@ -11,7 +11,7 @@
   overflow: hidden;
 
   &-sidebar {
-    z-index: 2;
+    z-index: 4;
     position: absolute;
     transition: transform .3s ease-out;
     will-change: transform;
@@ -25,7 +25,7 @@
   }
 
   &-overlay {
-    z-index: 1;
+    z-index: 3;
     position: absolute;
     top: 0;
     left: 0;
